add cypress cache list for debugging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,6 +161,9 @@ windows-workflow: &windows-workflow
               name: Cypress info
               command: yarn cypress info
           - run:
+              name: Cypress cache list
+              command: yarn cypress cache list
+          - run:
               name: Check Types
               command: yarn types
           - run:
